Fix VNC scrollbar when not scale mode

--- a/src/client/components/session/session.styl
+++ b/src/client/components/session/session.styl
@@ -78,9 +78,7 @@
     border-radius 0
   &::-webkit-scrollbar-corner
     background var(--main-darker)
-.vnc-session-wrap > div
-  display block !important
-  overflow hidden !important
+
 .not-split-view > .ant-splitter-bar .ant-splitter-bar-dragger
   display none
 
